# CPP07_QT_Course

./: .gitignore  readme.md
Airport_Inspector/: CMakeLists.txt
Airport_Inspector/headers/: database.h  enumerations.h  mainwindow.h  statwindow.h
Airport_Inspector/resources/: resources.qrc
Airport_Inspector/source/: about.ui  database.cpp  mainwindow.cpp  mainwindow.ui  statwindow.cpp  statwindow.ui
Doc/: Приложение Б - Матрица проверки требований.odt
